--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MineSweeper</title>
+    <title>MINESWEEPER</title>
     <link rel="stylesheet" href="css/app.css">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
 </head>
 
-<body onload="init(gEasy)">
-    <h1>MineSweeper</h1>
+<body onload="chooseLevel(gLevel)">
     <div class="levels">
-        <span class="easy" onclick="init(gEasy)">Easy</span>
-        <span class="medium" onclick="init(gMedium)">Medium</span>
-        <span class=" hard" onclick="init(gHard)">Hard</span>
+        <span class="easy btn btn-one" onclick="chooseLevel('easy')">Easy</span>
+        <span class="medium btn btn-one" onclick="chooseLevel('medium')">Medium</span>
+        <span class="hard btn btn-one" onclick="chooseLevel('hard')">Hard</span>
     </div>
-    <div class='timer'>Time: 0:00:00</div>
+    <h1> MineSweeper</h1>
+    <div class="emoji" onclick="chooseLevel(gLevel)"></div>
+    <div class='timer'>Time: 00:00:00</div>
     <table>
         <tbody class="board"></tbody>
     </table>
-    <div class="lives container">
+    <div class="lives">
         <!-- <img class="heart" src="img/life-1.png" alt="lives"> -->
         <span class="how-many-lives"></span>
     </div>
